--- a/package.json
+++ b/package.json
@@ -2,11 +2,13 @@
   "name": "organizations-in-dadata",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://dmitriynikiforov95.github.io/organizations-in-dadata",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "classnames": "^2.2.6",
+    "gh-pages": "^3.1.0",
     "lodash.throttle": "^4.1.1",
     "react": "^16.13.0",
     "react-debounce-input": "^3.2.2",
@@ -22,6 +24,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
+    "deploy": "gh-pages -d build",
+    "predeploy": "npm run build",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
